Initial cut at getting file based URIs to work with pages.

--- a/PageObjectTests/PageObjectTests.csproj
+++ b/PageObjectTests/PageObjectTests.csproj
@@ -74,6 +74,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PageTests.cs" />
     <Compile Include="BrowserTests.cs" />
     <Compile Include="PageFactoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -86,6 +87,9 @@
       <Project>{c1d3e486-2b8b-4a5a-8522-362eb6cc27bb}</Project>
       <Name>PageObject</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="FilePages\Home.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
