--- a/PageObjectTests/PageObjectTests.csproj
+++ b/PageObjectTests/PageObjectTests.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="FilePages\HomePage.cs" />
     <Compile Include="FilePages\Root.cs" />
+    <Compile Include="PageSessionTests.cs" />
     <Compile Include="PageConstructorTests.cs" />
     <Compile Include="BrowserTests.cs" />
     <Compile Include="PageFactoryTests.cs" />
