Reorganized test file page folder structure.

--- a/PageObjectTests/App.config
+++ b/PageObjectTests/App.config
@@ -5,8 +5,8 @@
   </configSections>
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <stepAssemblies>
+    <!--<stepAssemblies>
       <stepAssembly assembly="PageObject" />
-    </stepAssemblies>
+    </stepAssemblies>-->
   </specFlow>
 </configuration>
