First cut at getting Page attributes to work.

--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -81,6 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PageAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PageSteps.cs" />
     <Compile Include="Hooks.cs" />
