--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PageAttribute.cs" />
+    <Compile Include="PageAttributeExtractor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PageSteps.cs" />
     <Compile Include="Hooks.cs" />
