--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="PageObjectAttribute.cs" />
     <Compile Include="PageObjectAttributeExtractor.cs" />
+    <Compile Include="PageObjectException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PageSteps.cs" />
     <Compile Include="Hooks.cs" />
