--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -82,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PageObjectAttribute.cs" />
-    <Compile Include="PageObjectAttributeExtractor.cs" />
+    <Compile Include="PageDescriptor.cs" />
     <Compile Include="PageObjectException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PageSteps.cs" />
