Some class name clean up.

--- a/PageObjectTests/PageObjectTests.csproj
+++ b/PageObjectTests/PageObjectTests.csproj
@@ -87,8 +87,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>HomePage.feature</DependentUpon>
     </Compile>
-    <Compile Include="Pages\Google\GooglePage.cs" />
-    <Compile Include="Pages\AttributeTestPages.cs" />
+    <Compile Include="Pages\Google\HomePage.cs" />
+    <Compile Include="Pages\PageObjectAttributeTest\Pages.cs" />
     <Compile Include="Steps\PageSteps.cs" />
     <Compile Include="PageSessionTests.cs" />
     <Compile Include="BrowserTests.cs" />
