--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -81,7 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PageObjectAttribute.cs" />
+    <Compile Include="PageAtAttribute.cs" />
     <Compile Include="PageDescriptor.cs" />
     <Compile Include="PageObjectException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
