Updated page constructor tests to match page attribute tests and moved test page classes to be inner classes of test class.

--- a/PageObjectTests/PageObjectTests.csproj
+++ b/PageObjectTests/PageObjectTests.csproj
@@ -88,6 +88,8 @@
       <DependentUpon>HomePage.feature</DependentUpon>
     </Compile>
     <Compile Include="Pages\Google\HomePage.cs" />
+    <Compile Include="Pages\PageConstructor\ConstructorTestPage.cs" />
+    <Compile Include="Pages\PageConstructor\Root.cs" />
     <Compile Include="Pages\PageObjectAttribute\TestPages.cs" />
     <Compile Include="Steps\PageSteps.cs" />
     <Compile Include="PageSessionTests.cs" />
