Created PageObject.SpecFlow and PageObject.SpecFlow.tests to separate out SpecFlow dependencies from the core PageObject project.

--- a/PageObject.SpecFlow.Tests/PageObject.SpecFlow.Tests.csproj
+++ b/PageObject.SpecFlow.Tests/PageObject.SpecFlow.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B5FA51E7-0C6A-43D8-99C8-31823126E6B1}</ProjectGuid>
+    <ProjectGuid>{433A3C9D-A716-4DBB-9CE7-6FDC25C19414}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PageObject.Tests</RootNamespace>
-    <AssemblyName>PageObject.Tests</AssemblyName>
+    <RootNamespace>PageObject.SpecFlow.Tests</RootNamespace>
+    <AssemblyName>PageObject.SpecFlow.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,23 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Coypu, Version=2.10.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Coypu.2.10.0\lib\net40\Coypu.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Coypu.Drivers.Watin, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Coypu.Watin.2.3.1\lib\net40\Coypu.Drivers.Watin.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Interop.SHDocVw, Version=1.1.0.0, Culture=neutral, PublicKeyToken=db7cfd3acb5ad44e, processorArchitecture=MSIL">
-      <HintPath>..\packages\WatiN.2.1.0\lib\net40\Interop.SHDocVw.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="Microsoft.mshtml, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-      <HintPath>..\packages\WatiN.2.1.0\lib\net40\Microsoft.mshtml.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -54,7 +37,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,10 +44,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="TechTalk.SpecFlow, Version=1.9.0.77, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
       <HintPath>..\packages\SpecFlow.1.9.0\lib\net35\TechTalk.SpecFlow.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="WatiN.Core, Version=2.1.0.1196, Culture=neutral, PublicKeyToken=db7cfd3acb5ad44e, processorArchitecture=MSIL">
-      <HintPath>..\packages\WatiN.2.1.0\lib\net40\WatiN.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="WebDriver, Version=2.48.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -78,24 +56,39 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PageConstructorTests.cs" />
-    <Compile Include="PageObjectAttributeTests.cs" />
-    <Compile Include="PageSessionTests.cs" />
-    <Compile Include="BrowserTests.cs" />
-    <Compile Include="PageFactoryTests.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Pages\File\HomePage.cs" />
+    <Compile Include="Pages\File\HomePage.feature.cs">
+      <DependentUpon>HomePage.feature</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Pages\File\Root.cs" />
+    <Compile Include="Pages\Google\HomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Steps\PageSteps.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\File\Home.html" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Pages\File\HomePage.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>HomePage.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PageObject.SpecFlow\PageObject.SpecFlow.csproj">
+      <Project>{2bfab5a8-160e-4383-bab9-eca620222221}</Project>
+      <Name>PageObject.SpecFlow</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PageObject\PageObject.csproj">
       <Project>{c1d3e486-2b8b-4a5a-8522-362eb6cc27bb}</Project>
       <Name>PageObject</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
