Renamed PageSteps to simply Steps.

--- a/PageObject.SpecFlow/PageObject.SpecFlow.csproj
+++ b/PageObject.SpecFlow/PageObject.SpecFlow.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hooks.cs" />
+    <Compile Include="Steps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
