--- a/PageObject.SpecFlow.Tests/PageObject.SpecFlow.Tests.csproj
+++ b/PageObject.SpecFlow.Tests/PageObject.SpecFlow.Tests.csproj
@@ -48,7 +48,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Pages\File\HomePage.cs" />
     <Compile Include="Pages\File\HomePage.feature.cs">
       <DependentUpon>HomePage.feature</DependentUpon>
@@ -58,7 +57,7 @@
     <Compile Include="Pages\File\Root.cs" />
     <Compile Include="Pages\Google\HomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Steps\PageSteps.cs" />
+    <Compile Include="Steps\Steps.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pages\File\Home.html" />
