--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="PageAttributes\WithBaseUrl.cs" />
     <Compile Include="PageAttributes\WithBasePage.cs" />
     <Compile Include="PageConstructor\BaseTest.cs" />
+    <Compile Include="PageConstructor\WithBasePageClass.cs" />
     <Compile Include="PageConstructor\WithBaseUri.cs" />
     <Compile Include="PageConstructor\TestPage.cs" />
     <Compile Include="PageConstructor\WithBasePage.cs" />
