--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -74,11 +74,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseTest.cs" />
-    <Compile Include="PageAttributes\WithBaseUrl.cs" />
-    <Compile Include="PageAttributes\WithBasePage.cs" />
-    <Compile Include="PageAttributes\WithUrl.cs" />
-    <Compile Include="PageConstructor\WithBasePageClass.cs" />
+    <Compile Include="PageConstruction\BaseTest.cs" />
+    <Compile Include="PageConstruction\WithBasePage.cs" />
+    <Compile Include="PageConstruction\WithoutPageAtAttribute.cs" />
+    <Compile Include="PageConstruction\WithBaseUrl.cs" />
+    <Compile Include="PageConstruction\WithUrl.cs" />
     <Compile Include="PageSessionTests.cs" />
     <Compile Include="BrowserTests.cs" />
     <Compile Include="PageFactoryTests.cs" />
