--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="OnPageTests.cs" />
     <Compile Include="PageConstruction\BaseTest.cs" />
     <Compile Include="PageConstruction\WithBasePage.cs" />
+    <Compile Include="PageConstruction\WithEnvironmentVariables.cs" />
     <Compile Include="PageConstruction\WithoutPageAtAttribute.cs" />
     <Compile Include="PageConstruction\WithBaseUrl.cs" />
     <Compile Include="PageConstruction\WithUrl.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="PageFactoryTests.cs" />
     <Compile Include="Pages\File\HomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="EnvironmentVariablesTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
