Support environment variables defined in app.config.

--- a/PageObject.Tests/App.config
+++ b/PageObject.Tests/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
+  <appSettings>
+    <!-- Used to test expanding values in EnvironmentVariable class -->
+    <add key="test-app-config" value="test-app-config"/>
+  </appSettings>  
   
 </configuration>
