--- a/PageObject.Tests/App.config
+++ b/PageObject.Tests/App.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <!-- Used to test expanding values in EnvironmentVariable class -->
     <add key="test-app-config" value="test-app-config"/>
   </appSettings>  
   
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
