Refactored Text element.

--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -72,7 +72,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Elements\PageElementAttribute.cs" />
+    <Compile Include="Elements\Element.cs" />
+    <Compile Include="Elements\ElementFactory.cs" />
+    <Compile Include="Elements\ElementAttribute.cs" />
+    <Compile Include="Elements\Text.cs" />
     <Compile Include="EnvironmentVariables.cs" />
     <Compile Include="PageAtAttribute.cs" />
     <Compile Include="PageObjectException.cs" />
