--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -77,6 +77,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elements\ElementTest.cs" />
+    <Compile Include="Elements\TextElement\Test.cs" />
+    <Compile Include="Elements\TextElement\TestPage.cs" />
     <Compile Include="OnPageTests.cs" />
     <Compile Include="PageConstruction\BaseTest.cs" />
     <Compile Include="PageConstruction\WithBasePage.cs" />
@@ -89,7 +92,6 @@
     <Compile Include="PageFactoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EnvironmentVariablesTest.cs" />
-    <Compile Include="TextElementTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -102,7 +104,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Pages\File\Login.html" />
+    <Content Include="Elements\TextElement\TestPage.html" />
     <Content Include="Pages\File\Home.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
