--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Elements\ElementTest.cs" />
     <Compile Include="Elements\SelectElement\Test.cs" />
     <Compile Include="Elements\SelectElement\TestPage.cs" />
+    <Compile Include="Elements\BasePage.cs" />
     <Compile Include="Elements\TextElement\Test.cs" />
     <Compile Include="Elements\TextElement\TestPage.cs" />
     <Compile Include="OnPageTests.cs" />
