--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -107,10 +107,7 @@
   <ItemGroup>
     <Content Include="Pages\File\Home.html" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Elements\SelectElement\" />
-    <Folder Include="Elements\TextElement\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
