--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Elements\ElementFactory.cs" />
     <Compile Include="Elements\ElementAttribute.cs" />
     <Compile Include="Elements\Select.cs" />
+    <Compile Include="Elements\Checkbox.cs" />
     <Compile Include="Elements\Text.cs" />
     <Compile Include="EnvironmentVariables.cs" />
     <Compile Include="PageAtAttribute.cs" />
