Added support for Checkbox.Enabled and Checkbox.Disabled and moved common code to new InputElement.

--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -72,6 +72,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elements\InputElement.cs" />
     <Compile Include="Elements\Element.cs" />
     <Compile Include="Elements\ElementFactory.cs" />
     <Compile Include="Elements\ElementAttribute.cs" />
