R: Renamed Test to ElementTest.

--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -78,7 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Elements\CheckboxTest.cs" />
-    <Compile Include="Elements\Test.cs" />
+    <Compile Include="Elements\ElementTest.cs" />
     <Compile Include="Elements\TestPage.cs" />
     <Compile Include="Elements\SelectTest.cs" />
     <Compile Include="Elements\TextTest.cs" />
