--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Elements\ElementTest.cs" />
     <Compile Include="Elements\MultiSelectElementTest.cs" />
     <Compile Include="Elements\TestPage.cs" />
-    <Compile Include="Elements\SelectTest.cs" />
+    <Compile Include="Elements\SelectElementTest.cs" />
     <Compile Include="Elements\TextTest.cs" />
     <Compile Include="OnPageTests.cs" />
     <Compile Include="PageConstruction\BaseTest.cs" />
