--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -78,7 +78,7 @@
     <Compile Include="Elements\ElementAttribute.cs" />
     <Compile Include="Elements\MultiSelectElement.cs" />
     <Compile Include="Elements\SelectElement.cs" />
-    <Compile Include="Elements\Checkbox.cs" />
+    <Compile Include="Elements\CheckboxElement.cs" />
     <Compile Include="Elements\Text.cs" />
     <Compile Include="EnvironmentVariables.cs" />
     <Compile Include="PageAtAttribute.cs" />
