--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elements\RadioSelectElementTest.cs" />
     <Compile Include="Elements\RadioElementTest.cs" />
     <Compile Include="Elements\CheckboxElementTest.cs" />
     <Compile Include="Elements\ElementTest.cs" />
