--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -60,7 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Elements\RadioSelectElement.cs" />
+    <Compile Include="Elements\Radio.cs" />
     <Compile Include="Elements\InputElement.cs" />
     <Compile Include="Elements\Element.cs" />
     <Compile Include="Elements\ElementFactory.cs" />
