--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Elements\ElementFactory.cs" />
     <Compile Include="Elements\ElementAttribute.cs" />
     <Compile Include="Elements\MultiSelectElement.cs" />
-    <Compile Include="Elements\SelectElement.cs" />
+    <Compile Include="Elements\Select.cs" />
     <Compile Include="Elements\CheckboxElement.cs" />
     <Compile Include="Elements\TextElement.cs" />
     <Compile Include="EnvironmentVariables.cs" />
