--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -77,7 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Elements\RadioTest.cs" />
+    <Compile Include="Elements\RadioButtonsTest.cs" />
     <Compile Include="Elements\CheckboxElementTest.cs" />
     <Compile Include="Elements\ElementTest.cs" />
     <Compile Include="Elements\MultiSelectElementTest.cs" />
