R: Renamed MutliSelectElementTest to MultiSelectTest

--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -80,7 +80,7 @@
     <Compile Include="Elements\RadioButtonsTest.cs" />
     <Compile Include="Elements\CheckboxElementTest.cs" />
     <Compile Include="Elements\ElementTest.cs" />
-    <Compile Include="Elements\MultiSelectElementTest.cs" />
+    <Compile Include="Elements\MultiSelectTest.cs" />
     <Compile Include="Elements\TestPage.cs" />
     <Compile Include="Elements\SelectElementTest.cs" />
     <Compile Include="Elements\TextElementTest.cs" />
