R: Renamed Checkbox methods Check() to Select() and Uncheck to Deselect().

--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -78,7 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Elements\RadioButtonsTest.cs" />
-    <Compile Include="Elements\CheckboxElementTest.cs" />
+    <Compile Include="Elements\CheckboxTest.cs" />
     <Compile Include="Elements\ElementTest.cs" />
     <Compile Include="Elements\MultiSelectTest.cs" />
     <Compile Include="Elements\TestPage.cs" />
