--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -60,9 +60,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elements\Element.cs" />
     <Compile Include="Elements\RadioButtons.cs" />
     <Compile Include="Elements\Input.cs" />
-    <Compile Include="Elements\Element.cs" />
+    <Compile Include="Elements\HtmlElement.cs" />
     <Compile Include="Elements\ElementFactory.cs" />
     <Compile Include="Elements\ElementAttribute.cs" />
     <Compile Include="Elements\MultiSelect.cs" />
