R: Updated tests to use new Element and HtmlElement.

--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -77,10 +77,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elements\ElementTest.cs" />
     <Compile Include="Elements\InputTest.cs" />
     <Compile Include="Elements\RadioButtonsTest.cs" />
     <Compile Include="Elements\CheckboxTest.cs" />
-    <Compile Include="Elements\ElementTest.cs" />
+    <Compile Include="Elements\HtmlElementTest.cs" />
     <Compile Include="Elements\MultiSelectTest.cs" />
     <Compile Include="Elements\TestPage.cs" />
     <Compile Include="Elements\SelectElementTest.cs" />
