--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Elements\ElementFactory.cs" />
     <Compile Include="Elements\ElementAttribute.cs" />
     <Compile Include="Elements\MultiSelect.cs" />
+    <Compile Include="Elements\Submit.cs" />
     <Compile Include="Elements\SelectElement.cs" />
     <Compile Include="Elements\Checkbox.cs" />
     <Compile Include="Elements\Text.cs" />
