Renamed SelectElement to List.

--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Elements\MultiSelectTest.cs" />
     <Compile Include="Elements\SubmitTest.cs" />
     <Compile Include="Elements\TestPage.cs" />
-    <Compile Include="Elements\SelectElementTest.cs" />
+    <Compile Include="Elements\ListTest.cs" />
     <Compile Include="Elements\TextTest.cs" />
     <Compile Include="OnPageTests.cs" />
     <Compile Include="PageConstruction\BaseTest.cs" />
