--- a/PageObject.Tests/PageObject.Tests.csproj
+++ b/PageObject.Tests/PageObject.Tests.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Elements\RadioButtonsTest.cs" />
     <Compile Include="Elements\CheckboxTest.cs" />
     <Compile Include="Elements\HtmlElementTest.cs" />
-    <Compile Include="Elements\MultiSelectTest.cs" />
+    <Compile Include="Elements\MultiListTest.cs" />
     <Compile Include="Elements\SubmitTest.cs" />
     <Compile Include="Elements\TestPage.cs" />
     <Compile Include="Elements\ListTest.cs" />
