--- a/PageObject/PageObject.csproj
+++ b/PageObject/PageObject.csproj
@@ -63,7 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Elements\Element.cs" />
+    <Compile Include="Elements\BaseElement.cs" />
     <Compile Include="Elements\RadioButtons.cs" />
     <Compile Include="Elements\Input.cs" />
     <Compile Include="Elements\HtmlElement.cs" />
